# ChangeLog for Path Sandbox
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header$

  28 Feb 2004; Martin Schlemmer <azarah@gentoo.org> libsandbox.c :
  Besides a small cleanup, redo how we replace LD_PRELOAD in the environ passed
  to the real execve (in our execve wrapper).  Seems that on some arches (sparc
  among others) do not allow us to tamper with the readonly copy passed to
  execve, so pass our own copy of the environment.  Bug #42290.

  11 Jan 2004; Nicholas Jones <carpaski@gentoo.org> create-decls:
	Changed tail to head and added a notice about duration of glibc check.

  21 Dec 2003; Nicholas Jones <carpaski@gentoo.org> create-decls:
	Changed the glibc subversion check to use /usr/bin/* instead of /bin/sh
	as there isn't a guarentee that it is dynamic.

  02 Nov 2003; Martin Schlemmer <azarah@gentoo.org> libsandbox.c :
  If 'file' passed to before_syscall(const char *func, const char *file) is
  invalid, we should set errno to ENOENT, and not EINVAL.  This should
  close bug #32238.

  14 Oct 2003; Martin Schlemmer <azarah@gentoo.org> libsandbox.c :
  Fix a bug that occurs mainly on 64bit arch, where the file passed to
  the functions we wrap, is invalid, and then cause canonicalize to pass
  garbage to before_syscall(), thanks to great detective work from
  Andrea Luzzardi <al@sig11.org> (bug #29846).

  13 Oct 2003; Martin Schlemmer <azarah@gentoo.org> create-localdecls :
  Add a uClibc detection patch from Peter S. Mazinger <ps.m@gmx.net>.

  13 Oct 2003; Martin Schlemmer <azarah@gentoo.org> libsandbox.c :
  Fix a bug in libsandbox.c 's checking in the rename wrapper - it basically
  only checked the destination patch, and not the source, so we could move
  a protected file to a unprotected directory, and then delete/modify it.
  Thanks to Andrea Luzzardi (scox) <al@sig11.org>, bug #30992, for this fix.

  12 Oct 2003; Nicholas Jones <carpaski@gentoo.org> sandbox.c :
  Added python2.3 to the predict section/variable.
