@@ -2,6 +2,10 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Header$
 
+  29 Feb 2004; Martin Schlemmer <azarah@gentoo.org> sandbox.c, sandbox_futils.c :
+  Fix permissions and group of pids file and logs.  Permissions should be 0664
+  and group should be 'portage'.  Bug #34260.
+
   28 Feb 2004; Martin Schlemmer <azarah@gentoo.org> libsandbox.c :
   Besides a small cleanup, redo how we replace LD_PRELOAD in the environ passed
   to the real execve (in our execve wrapper).  Seems that on some arches (sparc
